[package]
name = "m8fsto"
description = "Command line song file helper"
version = "0.5.1"
edition = "2021"
repository = "https://github.com/Twinside/m8fsto"
homepage = "https://github.com/Twinside/m8fsto"
license = "MIT"
keywords = ["music"]

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
clap-num = "1.2.0"
glob = "0.3.2"
# m8-file-parser = { git = "https://github.com/Twinside/m8-file-parser.git" }
m8-file-parser = "0.4"

[features]
# Used to fix warnings stemming from array-concat
# This can be removed when this bug is fixed: https://github.com/inspier/array-concat/pull/4
const_panic = []
